--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "@types/react-router-dom": "^4.3.5",
     "antd": "^3.23.1",
     "babel-plugin-import": "^1.12.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.1",
     "customize-cra": "^0.6.0",
+    "dotenv": "^8.1.0",
     "electron-is-dev": "^1.1.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
+    "morgan": "^1.9.1",
+    "ngrok": "^3.2.5",
+    "qrcode": "^1.4.1",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
@@ -36,7 +44,7 @@
     "electron-build": "electron-builder",
     "release": "yarn react-build && electron-builder --publish=always",
     "build": "yarn react-build && yarn electron-build",
-    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
+    "start": "concurrently \"node server\" \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
