--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "description": "<your project description>",
   "author": "<author of app>",
   "build": {
-    "appId": "<com.your_app>",
-    "appDir": "./build"
+    "appId": "<com.your_app>"
   },
   "main": "public/electron.js",
   "homepage": "./",
